syntax = "proto3";

package exchange.api.v1;

import "google/protobuf/empty.proto";

option go_package = "exchange/api/v1;exchangepb";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}

  rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty) {}
}

message Order {
  enum Type {
    ORDER_TYPE_UNSPECIFIED = 0;

    LIMIT = 1;

    MARKET = 2;
  }

  string id = 1;

  Type type = 2;

  string pair = 3;

  Side side = 4;

  uint64 price = 5;

  uint64 volume = 6;
}

enum Side {
  SIDE_UNDEFINED = 0;

  BUY = 1;

  SELL = 2;
}

message CreateOrderRequest {
  Order order = 1;
}

message DeleteOrderRequest {
  string order_id = 1;
}
